added Select name to Pause button since they do the same action

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 {% endfor %}
 </select><br/><button id="launch">Launch</button><br/><br/>
 <button id="home">Home</button><button id="back">Back</button><br/>
-<button id="play">Play</button><button id="pause">Pause</button><br/>
+<button id="play">Play</button><button id="pause">Pause/Select</button><br/>
 <button id="rwd"> << RWD</button><button id="ffwd">FFWD >> </button><br/><br/>
 
 <script>
